fix: add sonarqube suggestions and fix failing IT